Added cupcake button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Jelly cupcake I love. Cupcake pastry I love tootsie roll candy canes sesame snap
   <div class="main">
     <button onClick="signIn();" class="purple-candy">Sign In</button>
     <button onClick="signUp();" class="skip">Sign Up</button>
-    <button class="cupcakes">Cupcakes!</button>
+    <button onClick="cupcakes();" class="cupcakes">Cupcakes!</button>
     <p id="output-here"></p>
   </div>
   
